--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -256,23 +256,31 @@ body{
     margin-bottom: 100px;
 }
 .footer-bg{
-    background: #e1b4ff;
+    background: #2a2828;
     padding: 60px 0;
 }
 .icons svg{
-    color: #7501C1;
-    padding-right: 10px;
+    color: white;
+    background: linear-gradient(90deg, #D90CB4, #7501C1);
+    margin-right: 10px;
     font-size: 25px;
+    padding: 1px 2px;
+    border-radius: 4px;
 }
 .footer-bg h3{
     font-size: 23px;
+    color:#D90CB4;
     padding-bottom: 10px;
+}
+.footer-bg p{
+    color: white;
 }
 .footer-contact ul li{
     list-style-type: none;
 }
 .footer-contact ul{
     padding: 0;
+    line-height: 38px;
 }
 .footer-contact p{
     display: inline-flex;
@@ -281,17 +289,27 @@ body{
     padding-bottom: 10px;
 }
 .footer-contact svg{
-    color: #7501C1;
-    font-size: 18px;
-    padding-right: 8px;
+    color: white;
+    background: linear-gradient(90deg, #D90CB4, #7501C1);
+    font-size: 12px;
+    margin-right: 12px;
+    padding: 8px;
+    border-radius: 50%;
+}
+.footer-contact .map{
+    padding: 8px 9px;
+}
+.mar{
+    margin-left: 45px;
 }
 .footer-bg .links ul{
     line-height: 30px;
+    color: white;
 }
 .footer-bg .links ul li a{
     font-weight: 400;
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .footer-bg .links ul li:hover{
     color: #D90CB4;
@@ -340,6 +358,8 @@ body{
 }
 .absec{
     margin-bottom: 100px;
+    background: white;
+    padding: 100px 0;
 }
 
 .pagebg{
@@ -364,4 +384,23 @@ body{
 }
 .gap{
     margin: 0;
+}
+.service-card img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+}
+.padding{
+    padding: 0;
+}
+.content{
+    padding: 20px;
+}
+.content p{
+    margin: 0;
+    padding: 0;
+}
+.new{
+    margin-bottom: 100px;
 }
