--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -404,3 +404,57 @@ body{
 .new{
     margin-bottom: 100px;
 }
+.contact{
+    padding: 100px 0;
+    margin-left: 70px;
+}
+.contact h3{
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #7501C1;
+    padding-bottom: 8px;
+}
+.contact h2{
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+.contact input{
+    padding: 12px;
+}
+.contact textarea{
+    padding: 12px;
+}
+.contact button{
+    background: linear-gradient(90deg, #D90CB4, #7501C1) !important;
+    width: 150px;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 10px;
+    color: white;
+    font-weight: 600;
+}
+.contact button:hover{
+    background: white !important;
+    color: #7501C1;
+    border: 1px solid;
+    border-color: linear-gradient(90deg, #D90CB4, #7501C1);
+}
+.contact-content{
+    margin-left: 25px;
+}
+.contact h6{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0;
+    padding-bottom: 5px;
+}
+.contact .icons{
+    padding-top: 5px;
+}
+.contact p{
+    margin-bottom: 20px;
+}
+.map iframe{
+    width: 100%;
+    height: 500px;
+}
